--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,26 @@
+/*Setting custom colors*/
 :root {
     --black: black;
     --white: white;
     --grey-pink: rgb(144, 125, 145);
 }
 
+/*making sure body of the webpage covers the entire page*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/*Sets the style/decoration of the header texts*/
+h1,
+h2 {
+    -webkit-text-fill-color: var(--grey-pink);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--black);
+}
+
+/*Sets background of webpage*/
 .super-background {
     height: 100%;
     width: 100%;
@@ -18,11 +29,7 @@
 
 }
 
-a {
-    color: var(--black);
-    text-decoration: none;
-}
-
+/*Sets the properties of the header and its contents*/
 header {
     height: 300px;
     padding: 32px 64px 64px 64px;
@@ -33,10 +40,52 @@ header {
     justify-content: space-between;
 }
 
+/*Scales the image of my face to fit the header*/
 img {
+    align-items: center;
     height: 300px;
 }
 
+/*Sets the properties of my name at the top of the webpage, establishes box width for even spacing*/
+.name {
+    font-size: 90px;
+    margin-top: 0;
+    width: 25%;
+}
+
+/*Establishes width of box for even spacing*/
+.nav {
+    width: 25%;
+}
+
+/*Sets font properties for the nav bar*/
+header div nav {
+    bottom: 48px;
+    right: 48px;
+    font-size: 36px;
+    float: right;
+    
+}
+
+/*Sets the spacing between nav bar items*/
+header div nav ul li {
+    margin: 8px;
+}
+
+/*removes underlines from nav bar, sets font colors*/
+header div nav ul li a {
+    text-decoration: none;
+    -webkit-text-fill-color: var(--grey-pink);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--black);
+}
+
+/*adds shaddow effect when hovering over nav bar items*/
+header div nav ul li a:hover {
+    box-shadow: inset 0px 0px 10px;
+}
+
+/*sets box size of main and establishes border properties*/
 main {
     padding: 64px;
     margin: 3px;
@@ -44,57 +93,12 @@ main {
     border-color: var(--white);
 }
 
-h1,
-h2 {
-    -webkit-text-fill-color: var(--grey-pink);
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: var(--black);
-}
-
-#name {
-    font-size: 90px;
-    margin-top: 0;
-    width: 25%;
-}
-
-#nav {
-    width: 25%;
-}
-
-#right {
-    float: right;
-}
-
-header nav {
-    bottom: 48px;
-    right: 48px;
-    font-size: 36px;
-    width: 33%;
-}
-
-header nav ul {
-    
-}
-
-header nav ul li {
-    margin: 8px;
-}
-
-header nav ul li a {
-    font-size: 36px;
-    -webkit-text-fill-color: var(--grey-pink);
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: var(--black);
-}
-
-header nav ul li a:hover {
-    box-shadow: inset 0px 0px 10px;
-}
-
+/*sets size of the h2 headers in main*/
 main h2 {
     font-size: 52px;
 }
 
+/*sets box properties of the About Me section*/
 .top {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -104,6 +108,7 @@ main h2 {
     background-color: var(--white);
 }
 
+/*sets box properties of the Portfolio section*/
 .middle {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -111,21 +116,14 @@ main h2 {
     margin-bottom: 5px;
 }
 
-.bottom {
-    margin-top: 48px;
-    padding: 48px;
-    padding-bottom: 64px;
-    border: solid;
-    border-color: var(--grey-pink);
-    background-color: var(--white);
-}
-
+/*creates grid for Portfolio section*/
 .portfolio-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 200px;
 }
 
+/*properties/image of the first grid box, makes it larger than the others*/
 .box1 {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -139,9 +137,10 @@ main h2 {
     font-size: 48px;
     color: var(--grey-pink);
     text-align: center;
+    text-decoration: none;
 }
 
-
+/*properties/image of the 2nd grid box*/
 .box2 {
     border: solid;
     border-color: var(--grey-pink);
@@ -153,6 +152,7 @@ main h2 {
     text-align: right;
 }
 
+/*properties/image of the 3rd grid box*/
 .box3 {
     border: solid;
     border-color: var(--grey-pink);
@@ -164,6 +164,7 @@ main h2 {
     text-align: right;
 }
 
+/*properties/image of the 4th grid box*/
 .box4 {
     border: solid;
     border-color: var(--grey-pink);
@@ -175,6 +176,7 @@ main h2 {
     text-align: left;
 }
 
+/*properties/image of the 5th grid box*/
 .box5 {
     border: solid;
     border-color: var(--grey-pink);
@@ -186,11 +188,13 @@ main h2 {
     text-align: left;
 }
 
+/*creates a shadow for 1st grid box and changes cursor*/
 .box1:hover {
     box-shadow: inset 0px 0px 40px;
     cursor: pointer;
 }
 
+/*creates a shadow for the smaller grid boxes and changes cursor*/
 .box2:hover,
 .box3:hover,
 .box4:hover,
@@ -199,12 +203,25 @@ main h2 {
     cursor: pointer;
 }
 
+/*sets box properties of the Contact Me section*/
+.bottom {
+    margin-top: 48px;
+    padding: 48px;
+    padding-bottom: 64px;
+    border: solid;
+    border-color: var(--grey-pink);
+    background-color: var(--white);
+}
+
+/*aligns the contact links to the right, sets margins*/
+/*reverses the order of the list items... kind of weird*/
 section div ul li {
     display: inline;
     float: right;
-    margin: 25px;
+    margin: 10px;
 }
 
+/*sets the text properties of the contact links*/
 section div ul li a {
     text-decoration: none;
     font-size: 28px;
@@ -213,10 +230,22 @@ section div ul li a {
     -webkit-text-stroke-color: var(--black);
 }
 
+/*sets the box shadow when hovering over links*/
 section div ul li a:hover {
     box-shadow: inset 0px 0px 10px;
 }
 
+/*sets the properties of the footer*/
+footer p {
+    border: solid;
+    border-color: white;
+    margin: 3px;
+    font-size: 15px;
+    text-align: center;
+    color: var(--black)
+}
+
+/*adjusts some box and text properties when display size drops below 1200px*/
 @media screen and (max-width: 1200px) {
     main {
         padding-right: 5px;
@@ -229,7 +258,6 @@ section div ul li a:hover {
     
     .bottom {
         display: flex;
-
     }
 
     section div ul li a {
@@ -237,9 +265,9 @@ section div ul li a:hover {
     }
 }
 
+/*Removes the picture of my face when display size drops below 900px so the contents of the header are still readable*/
 @media screen and (max-width: 900px) {
     header div img {
         display: none;
     }
-    
 }
