--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ main h2 {
     border: solid;
     border-color: var(--grey-pink);
     margin: 2px;
-    background-image: url(../images/placeholder\ image\ 2.jpg);
+    background-image: url(../images/kanyeimage2.webp);
     background-size: cover;
     font-size: 36px;
     color: var(--black);
