--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,14 +120,14 @@ main h2 {
 .portfolio-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 200px;
+    grid-auto-rows: 400px;
 }
 
 /*properties/image of the first grid box, makes it larger than the others*/
 .box1 {
     grid-column-start: 1;
     grid-column-end: 3;
-    grid-row-start: 1;
+    grid-row-start: 2;
     grid-row-end: 3;
     border: solid;
     border-color: var(--grey-pink);
@@ -171,11 +171,12 @@ main h2 {
     border: solid;
     border-color: var(--grey-pink);
     margin: 2px;
-    background-image: url(../images/placeholder\ image\ 3.jpg);
+    background-image: url(../images/languages-signpost.jpg);
     background-size: cover;
     font-size: 36px;
     color: var(--black);
     text-align: left;
+    text-decoration: none;
 }
 
 /*properties/image of the 5th grid box*/
